# hark

./: .gitignore  README.md  commands.txt  pyproject.toml
src/: api.py  client.py  common.py
src/jobs/: checksum.py  export.py  extract_text.py  fs_synchronize.py  utils.py
src/schemas/: export.py  recordings.py  searches.py
tests/: test_api.py
upper_dir/: audiologger.service  installation_notes.txt  push.sh  record.sh  sync.sh
