[project]
name = "recording-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2>=2.9.10",
    "mutagen>=1.47.0",
    "tqdm>=4.67.1",
    "fastapi[standard]>=0.115.12",
    "asyncpg>=0.30.0",
    "requests>=2.32.3",
    "pydantic>=2.11.4",
    "torch",
    "transformers",
    "pytest",
    "ruff>=0.11.9",
    "isort>=6.0.1",
    "ty>=0.0.0a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]


# ruff

[tool.ruff.format]
indent-style = "tab"
